--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,9 @@ social:
   - title: twitter
     url: https://twitter.com/amrsekilly
   - title: github
-    url: https://github.com/IronSummitMedia/startbootstrap
+    url: https://github.com/amrme
+  - title: linkedin
+    url: https://eg.linkedin.com/in/amrsekilly
   - title: facebook
     url: https://www.facebook.com/amrsekilly
 
