--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "Amr Mohamed Elsayed Elsekilly's portfolio, personal website, blog,
 # Color settings (hex-codes without the leading hash-tag)
 color:
   primary-dark: '#000000'
-  links: '#219ab3'
+  links: '#ffffff'
 
 # Footer settings
 footer: Amr Sekilly
