--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,8 @@ social:
     url: https://github.com/amrme
   - title: linkedin
     url: https://eg.linkedin.com/in/amrsekilly
+  - title: instagram
+    url: https://www.instagram.com/amrsekilly
   - title: facebook
     url: https://www.facebook.com/amrsekilly
 
