edited some content in both the about and the contac

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: Amr Elsekilly's Portfolio
+title: Amr Elsekilly | Front-end web developer, HTML5, JavaScript, CSS3, Angular.js, Meteor.js
 email: amr.e.dev@gmail.com
 url: http://amrsekilly.com
-description: "Amr Mohamed Elsayed Elsekilly's portfolio, personal website, blog, contact, web developer, front end web developer, full stack web developer"
+description: "Amr Mohamed Elsayed Abdelkhalek Elsekilly, Front-end web developer, HTML5, JavaScript, CSS3, Angular.js, Meteor.js"
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
