--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ color:
   links: '#ffffff'
 
 # Footer settings
-footer: Amr Sekilly
+footer: <a href="https://twitter.com/amrsekilly">Amr Sekilly</a>
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
