edited the about text

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Amr Elsekilly | Front-end web developer, HTML5, JavaScript, CSS3, Angular.js, Meteor.js
 email: amr.e.dev@gmail.com
 url: http://amrsekilly.com
-description: "Amr Mohamed Elsayed Abdelkhalek Elsekilly, Front-end web developer, HTML5, JavaScript, CSS3, Angular.js, Meteor.js"
+description: "Amr Mohamed Elsayed Abdelkhalek Elsekilly, Front-end web developer, HTML5, JavaScript, CSS3, Angular.js, Meteor.js, ROV, MIA, Aquaphoton academy team, MATE"
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
