--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Amr Elsekilly | Front-end web developer, HTML5, JavaScript, CSS3, Angular.js, Meteor.js
+title: Amr Elsekilly | Front-end Web Developer, HTML5, JavaScript, CSS3, Angular.js, Meteor.js
 email: amr.e.dev@gmail.com
 url: http://amrsekilly.com
 description: "Amr Mohamed Elsayed Abdelkhalek Elsekilly, Front-end web developer, HTML5, JavaScript, CSS3, Angular.js, Meteor.js, ROV, MIA, Aquaphoton academy team, MATE"
