changed github's url

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ social:
   - title: twitter
     url: https://twitter.com/amrsekilly
   - title: github
-    url: https://github.com/amrme
+    url: https://github.com/amrsekilly
   - title: linkedin
     url: https://eg.linkedin.com/in/amrsekilly
   - title: instagram
