--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: Amr Elsekilly | Front-end Web Developer, HTML5, JavaScript, CSS3, Angular.js, Meteor.js
-email: amr.e.dev@gmail.com
+title: Amr Elsekilly | Front-end Web Developer at webee
+email: amr@webee.com.mt
 url: http://amrsekilly.com
-description: "Amr Mohamed Elsayed Abdelkhalek Elsekilly, Front-end web developer, HTML5, JavaScript, CSS3, Angular.js, Meteor.js, ROV, MIA, Aquaphoton academy team, MATE"
+description: "Amr Mohamed Elsayed Elsekilly, Front-end web developer at Webee.com.mt"
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
@@ -14,16 +14,24 @@ footer: <a href="https://twitter.com/amrsekilly">Amr Sekilly</a>
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
+  - title: envelope
+    url: mailto:amr@webee.com.mt
+    name: Email
   - title: twitter
     url: https://twitter.com/amrsekilly
+    name: Twitter
   - title: github
     url: https://github.com/amrsekilly
+    name: GitHub
   - title: linkedin
     url: https://eg.linkedin.com/in/amrsekilly
+    name: LinkedIn
   - title: instagram
     url: https://www.instagram.com/amrsekilly
+    name: Instagram
   - title: facebook
     url: https://www.facebook.com/amrsekilly
+    name: Facebook
 
 # Build settings
 # Sass
