--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Amr Elsekilly | Front-end Web Developer at webee
 email: amr@webee.com.mt
-url: http://amrsekilly.com
+url: https://amrsekilly.com
 description: "Amr Mohamed Elsayed Elsekilly, Front-end web developer at Webee.com.mt"
 
 # Color settings (hex-codes without the leading hash-tag)
