moved the redirection code inside the doc ready function

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Amr Elsekilly | Front-end Web Developer at webee
+title: Amr Elsekilly | Front-end Web Developer at Webee
 email: amr@webee.com.mt
 url: https://amrsekilly.com
 description: "Amr Mohamed Elsayed Elsekilly, Front-end web developer at Webee.com.mt"
