--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,8 @@ description: "Amr Mohamed Elsayed Elsekilly, Front-end web developer at Webee.co
 # Color settings (hex-codes without the leading hash-tag)
 color:
   primary-dark: '#000000'
+  primary-blue: '#227DC4'
+  secondary-blue: '#0e4369'
   links: '#ffffff'
 
 # Social networks
