--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Amr Elsekilly | Front-end Web Developer
 email: amr@webee.com.mt
 url: https://amrsekilly.com
 hireurl: https://www.upwork.com/o/profiles/users/_~014d7603bde62ae128/
-description: "test"
+description: "Amr Mohamed Elsayed Elsekilly, Front-end web developer at Webee.com.mt"
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
