--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,10 @@ description: "Amr Mohamed Elsayed Elsekilly, Front-end web developer at Webee.co
 # Color settings (hex-codes without the leading hash-tag)
 color:
   primary-dark: '#000000'
-  primary-blue: '#227DC4'
-  secondary-blue: '#0e4369'
-  links: '#ffffff'
+  primary-blue: '#70D2D8'
+  secondary-blue: '#74e7ed'
+  primary-white: '#5E5F5D'
+  links: '#5E5F5D'
 
 # Social networks
 social:
