added YouTube link

--- a/_config.yml
+++ b/_config.yml
@@ -30,9 +30,9 @@ social:
   - title: instagram
     url: https://www.instagram.com/amrsekilly
     name: Instagram
-  - title: facebook
-    url: https://www.facebook.com/amrsekilly
-    name: Facebook
+  - title: youtube
+    url: https://www.youtube.com/channel/UC3qtkVwRWmbbkK-dnllL7xQ
+    name: YouTube
 
 # Build settings
 # Sass
