--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: Amr Elsekilly | Front-end Web Developer
-email: amr@webee.com.mt
+title: Amr Elsekilly | Full Stack Web Developer
+email: amr@amrsekilly.com
 url: https://amrsekilly.com
 hireurl: https://www.upwork.com/o/profiles/users/_~014d7603bde62ae128/
-description: "Amr Mohamed Elsayed Elsekilly, Front-end web developer at Webee.com.mt"
+description: "Amr Mohamed Elsayed Elsekilly, Full Stack Web Developer - React, NodeJS, Express, Firebase, MongoDB, Angular"
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
