modified the build file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,9 +8,10 @@ pages:
     - yarn install
     - ./node_modules/.bin/gatsby build --prefix-paths 
     - mkdir -p public/.well-known/acme-challenge/
-    - cp le/*  public/.well-known/acme-challenge/
   artifacts:
     paths:
     - public
+  script: 
+    - cp le/*  public/.well-known/acme-challenge/
   only:
   - master
