modified the build file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,8 @@ pages:
     paths:
     - public
   script: 
-    - mkdir -p public/.well-known/acme-challenge/
+    - mkdir public/.well-known/
+    - mkdir public/.well-known/acme-challenge/
     - cp le/*  public/.well-known/acme-challenge/
   only:
   - master
