--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,8 @@ pages:
   script:
     - yarn install
     - ./node_modules/.bin/gatsby build --prefix-paths 
-    - mkdir public/.well-known/ && mkdir public/.well-known/acme-challenge/ && cp le/*  public/.well-known/acme-challenge/
+    - mkdir -p mkdir public/.well-known/acme-challenge/
+    - cp le/*  public/.well-known/acme-challenge/
   artifacts:
     paths:
     - public
