--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby-image": "^1.0.27",
     "gatsby-link": "^1.6.28",
     "gatsby-plugin-google-analytics": "^1.0.22",
+    "gatsby-plugin-offline": "^2.1.0",
     "gatsby-plugin-react-helmet": "^1.0.8",
     "gatsby-plugin-sass": "^1.0.14",
     "gatsby-plugin-sharp": "^1.6.21",
