--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "gatsby develop",
     "prod": "gatsby build && cp CNAME public && cp robots.txt public && cp RefundPolicy.html public",
     "clean": "gatsby clean",
-    "proxy": "netlify-cms-proxy-server"
+    "proxy": "netlify-cms-proxy-server",
+    "deploy": "yarn prod && gh-pages -d public -b master"
   },
   "dependencies": {
     "@narative/gatsby-theme-novela": "^0.*",
@@ -19,5 +20,8 @@
     "netlify-cms-proxy-server": "^1.1.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
