--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@narative/gatsby-theme-novela": "^0.*",
     "gatsby": "^2.13.41",
     "gatsby-plugin-mailchimp": "^5.2.2",
-    "gatsby-plugin-manifest": "^2.2.4",
+    "gatsby-plugin-manifest": "^2.4.12",
     "gatsby-plugin-netlify-cms": "^4.1.40",
     "netlify-cms-app": "^2.11.23",
     "netlify-cms-proxy-server": "^1.1.4",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "sharp": "^0.25.4"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0"
