--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prod": " gatsby build && cp CNAME public && cp robots.txt public && cp RefundPolicy.html public",
     "clean": "gatsby clean",
     "proxy": "netlify-cms-proxy-server",
-    "deploy": "rm -rf public .cache && mkdir public && mkdir public/src && mkdir public/src/images && yarn prod && gh-pages -d public -b master"
+    "deploy": "rm -rf public .cache && mkdir public && mkdir public/src && mkdir public/src/images && yarn prod"
   },
   "dependencies": {
     "@narative/gatsby-theme-novela": "^0.*",
