--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -23,8 +23,8 @@ jobs:
           node-version: 10
       - run: |
           rm -rf public .cache && rm -rf node_modules && mkdir public && mkdir public/src && mkdir public/src/images
-          npm i
-          npm run prod
+          yarn
+          yarn prod
 
       - uses: JamesIves/github-pages-deploy-action@3.5.7
         with:
