--- a/package.json
+++ b/package.json
@@ -11,17 +11,15 @@
     "deploy": "rm -rf public .cache && rm -rf node_modules && rm package-lock.json && mkdir public && mkdir public/src && mkdir public/src/images && yarn prod"
   },
   "dependencies": {
-    "@narative/gatsby-theme-novela": "0.13.3",
+    "@narative/gatsby-theme-novela": "^0.*",
     "gatsby": "^2.13.41",
-    "gatsby-plugin-google-analytics": "^2.3.4",
-    "gatsby-plugin-mailchimp": "^5.2.2",
-    "gatsby-plugin-manifest": "^2.4.12",
+    "gatsby-plugin-google-analytics": "^2.8.0",
+    "gatsby-plugin-manifest": "^2.2.4",
     "gatsby-plugin-netlify-cms": "^4.1.40",
     "netlify-cms-app": "^2.11.23",
     "netlify-cms-proxy-server": "^1.1.4",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "sharp": "^0.25.4"
+    "react-dom": "^16.8.6"
   },
   "devDependencies": {
     "gatsby-cli": "^2.12.62",
