--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -31,3 +31,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: master
           FOLDER: public
+        env:
+          ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
