Updated my personal information

--- a/content/authors/authors/amr-elsekilly.yml
+++ b/content/authors/authors/amr-elsekilly.yml
@@ -1,6 +1,6 @@
 name: Amr Elsekilly
 bio: |
-  Senior Frontend Engineer at Pelcro. 
+  Tech Lead at Airalo. 
   I also make OSS contributions, write blog posts, 
   and create videos on YouTube about frontend web development and remote work.
 avatar: ./avatars/amr-elsekilly.png
