--- a/content/authors/authors/amr-elsekilly.yml
+++ b/content/authors/authors/amr-elsekilly.yml
@@ -1,7 +1,7 @@
 name: Amr Elsekilly
 bio: |
-  Frontend Engineering Lead at Airalo. 
-  I also make OSS contributions, write blog posts, 
+  Frontend Engineering Lead at Blink22.
+  I also make OSS contributions, write blog posts,
   and create videos on YouTube about frontend web development and remote work.
 avatar: ./avatars/amr-elsekilly.png
 social:
