--- a/content/authors/authors/amr-elsekilly.yml
+++ b/content/authors/authors/amr-elsekilly.yml
@@ -3,7 +3,7 @@ bio: |
   Frontend Engineering Lead at Blink22.
   I also make OSS contributions, write blog posts,
   and create videos on YouTube about frontend web development and remote work.
-avatar: ./avatars/amr-elsekilly.png
+avatar: ./avatars/amr-elsekilly.jpeg
 social:
   - url: https://youtube.com/amrsekilly/
   - url: https://linkedin.com/in/amrsekilly/
